# mdconvert

./: .gitignore  index.html  package.json  pnpm-lock.yaml  test-sample.md  vite.config.ts
scripts/: build_reference_docx.py  encode-katex-fonts.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: reference.docx
src-tauri/resources/templates/: reference.docx
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  Preview.tsx  SettingsDialog.tsx  Toolbar.tsx
src/lib/: debugLogger.ts  exportDocx.ts  exportPdf.ts  markdownRenderer.ts  mermaidRenderer.ts  preprocessMarkdown.ts
src/styles/: katex-font-fix.css  preview.css  print.css
src/types/: markdown-it-texmath.d.ts
