[package]
name = "markdown-to-word-app"
version = "2.0.0"
description = "Markdown转换程序 - AI Markdown 导出工具"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_to_word_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
